--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body {
-    background: [#000000];
+    background: #000000;
     font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
-    color: [#270287];
+    color: #270287;
     text-align: center;
 }
